Enhance scorecard generator to move chart key to the right, providing more room on the chart itself. Add new scorecard parsers for Acunetix, Rapid7, WebInspect, and Contrast. Add crawler application that will crawl every page in the Benchmark to support IAST tools. Enhance SonarQube scripts to better tell if sonarqube web app is running when we want to send it results. Add support for running the Benchmark with monitoring by Contrast (requires separate contrast.jar which isn't provided) Add scripts for producing the Contrast results file after the Benchmark is crawled by the crawler while being monitored by Contrast.